force-app/main/default/objects/Risk__c/Risk__c.object-meta.xml
<CustomObject>
    <label>Risk</label>
    <nameField>
        <label>Risk area/risk identified</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>