force-app/main/default/objects/Risk__c/fields/CalculatedGrossRisk__c.field-meta.xml
<CustomField>
    <fullName>CalculatedGrossRisk__c</fullName>
    <formula>VALUE(
    MID(
        TEXT(Likelihood__c), 
        FIND(&quot;(&quot;, TEXT(Likelihood__c)) + 1, 
        FIND(&quot;)&quot;, TEXT(Likelihood__c)) - FIND(&quot;(&quot;, TEXT(Likelihood__c)) - 1
    )
) * 
VALUE(
    MID(
        TEXT(Impact__c), 
        FIND(&quot;(&quot;, TEXT(Impact__c)) + 1, 
        FIND(&quot;)&quot;, TEXT(Impact__c)) - FIND(&quot;(&quot;, TEXT(Impact__c)) - 1
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall or ‘gross’ risk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>