force-app/main/default/objects/Risk__c/fields/ControlProcedure__c.field-meta.xml
<CustomField>
    <fullName>ControlProcedure__c</fullName>
    <label>Control Procedure</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>