force-app/main/default/objects/Risk__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insignificant (1)</fullName>
            </value>
            <value>
                <fullName>Minor (2)</fullName>
            </value>
            <value>
                <fullName>Moderate (3)</fullName>
            </value>
            <value>
                <fullName>Major (4)</fullName>
            </value>
            <value>
                <fullName>Extreme/Catastrophic (5)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>