force-app/main/default/objects/Risk__c/fields/Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Likelihood__c</fullName>
    <label>Likelihood</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remote (1)</fullName>
            </value>
            <value>
                <fullName>Unlikely (2)</fullName>
            </value>
            <value>
                <fullName>Possible (3)</fullName>
            </value>
            <value>
                <fullName>Probable (4)</fullName>
            </value>
            <value>
                <fullName>Highly Probable (5)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>